WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194407
Overflow element scrollbar is light for dark mode content
https://bugs.webkit.org/show_bug.cgi?id=194407
Summary
Overflow element scrollbar is light for dark mode content
Timothy Hatcher
Reported
2019-02-07 12:22:40 PST
The overflow case was missed when fixing scrollbars for dark mode FrameViews in
https://trac.webkit.org/changeset/237466/webkit
. <
rdar://problem/45991585
>
Attachments
Patch
(13.24 KB, patch)
2019-02-07 12:34 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-02-07 12:34:59 PST
Created
attachment 361428
[details]
Patch
EWS Watchlist
Comment 2
2019-02-07 12:39:21 PST
Attachment 361428
[details]
did not pass style-queue: ERROR: Source/WebCore/page/ChromeClient.h:409: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2019-02-07 15:34:31 PST
Comment on
attachment 361428
[details]
Patch Clearing flags on attachment: 361428 Committed
r241150
: <
https://trac.webkit.org/changeset/241150
>
WebKit Commit Bot
Comment 4
2019-02-07 15:34:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug